--- a/public/index-1.html
+++ b/public/index-1.html
@@ -74,7 +74,7 @@
 								<div class="lx-clear-fix"></div>
 								<div class="lx-home-buttons">
 									<!--<a href="#">HIRE ME</a>-->
-									<a href="#">DOWNLOAD MY CV</a>
+									<a href="downloadcv">DOWNLOAD MY CV</a>
 								</div>								
 							</div>
 						</div>
