--- a/public/index-1.html
+++ b/public/index-1.html
@@ -68,8 +68,8 @@
 								<div class="lx-home-overview">
 									<h1>James Murphy</h1>
 									<em>Ecommerce Operations & IT Professional</em>
-									<p>Accomplished and versatile leader, equipped with 20+ years experience in e-commerce operations, software development, team leadership and strategic planning.<br>
-										Results-oriented professional with proven success in effective implementation of operational process improvement.</p>
+									<p>Accomplished and versatile leader, equipped with 20+ years experience in e-commerce operations, software development, team leadership and strategic planning.
+										<!--<br>Results-oriented professional with proven success in effective implementation of operational process improvement.</p>-->
 								</div>
 								<div class="lx-clear-fix"></div>
 								<div class="lx-home-buttons">
