--- a/public/index-1.html
+++ b/public/index-1.html
@@ -93,10 +93,14 @@
 								<h3><span>Know Me</span></h3>
 								<p>During my 20+ year uninterrupted career, I have contributed to 6 organizations across both England and Canada
 									within the ecommerce, "bricks-and-mortal" retail, & supply chain industries.  My bachelors degree in business was 
-									supplemented with a part-time masters degree in web development, completed early 2018, which granted me entry to the Honor Society of Phi Kappa Phi.<br><br>
+									supplemented with a part-time masters degree in web development, completed early 2018, which granted me 
+									privileged entry to the Honor Society of Phi Kappa Phi.<br><br>
+									Whilst at Best Buy Canada, I have been awarded the coveted "Best Buy Chairman's Award" three times for 
+									projects involving development of custom software to optimize operations within the buying, merchandising 
+									& supply chain arenas.<br><br>
 									My work-life balance is struck by sharing my passion for web and app development, as well as publishing 
 									instructional materials via YouTube.  A strong desire to coach others has been fulfilled via various 
-									charitable organizations, one of which led me as far as Africa to a school for disadvataged
+									charitable organizations, one of which led me as far as Africa to a school for disadvantaged
 									children, <em>the video documentary for which you can view at the bottom/left of this page</em>.
 								</p>
 								<div class="lx-g2-f lx-fr">
@@ -202,7 +206,7 @@
 											<p>Custom software created with Microsoft C# can plug into any database technology and automate alerts, communications 
 												and reports via a mixture of Microsoft Outlook/Excel and a choice of GUI technologies.<br> 
 												This approach is proven to increase productivity & efficiency tenfold with zero cost and minimal time investment; Best Buy have graciously awarded
-												me with their highest accolade on 3 seperate occasions through adherence to this tried and tested methodology (see "Awards" below).<br>   
+												me with their highest accolade on three seperate occasions through adherence to this tried and tested methodology (see "Awards" below).<br>   
 											</p>
 										</div>
 									</div>
@@ -415,7 +419,7 @@
 											<!--bullets-->
 											<ul>
 												<li>Partnered with 3rd party platform provider and in-house development teams to build effective and scalable marketplace platform, along with necessary SOP’s to ensure optimum customer experience and financial viability.</li>
-												<li>Lead an 8-member team tasked with overseeing platform IT integrity & optimization, seller support & profitability, as well as ensuring an optimized experience for our final customer.</li>	
+												<li>Lead an 11-member team tasked with overseeing platform IT integrity & optimization, seller support & profitability, as well as ensuring an optimized experience for our final customer.</li>	
 												<li>Optimize customer & seller experience through process optimization & automation, via software customization.</li>
 												<li>Build strategic alliances with 3rd party partners including API integration services, web scraping platforms, business intelligence providers and courier services.</li>
 											</ul>
@@ -433,7 +437,7 @@
 											<span><a href="https://www.bestbuy.ca/" target="blank">Best Buy Canada, Vancouver, Canada</a></span>
 												<!--bullets-->
 												<ul>
-													<li>Led a 10-member team tasked with overseeing vendor management, online content production, competitive pricing strategy, EDI operations and vendor order fulfillment.</li>
+													<li>Led a team tasked with overseeing vendor management, online content production, competitive pricing strategy, EDI operations and vendor order fulfillment.</li>
 													<li>Collaborated with partners (vendors, 3rd-party fulfillment house, EDI intermediary, pricing intelligence partner and carriers) to improve operational metrics through adoption of SOPs and integration of software technologies.</li>	
 													<li>Developed operational and IT systems, as well as financial blueprints necessary to capitalize on emerging customer and market needs.</li>
 													<li>Maximized salvage revenue for returned products via liquidation through secondary markets.</li>
@@ -474,7 +478,7 @@
 											</ul>
 										</li>							
 										<li>
-											<h4>Senior Manager, Supply Chain Operations | 2002-2003</h4>
+											<h4>Senior Manager, Supply Chain Operations | 2001-2003</h4>
 											<span><a href="https://en.wikipedia.org/wiki/Cargo_(store)" target="blank">J.W. Carpenter Ltd, Oxford, England</a></span>
 											<ul>
 												<li>Led a 12-member team responsible for purchasing and inventory management, serving a chain of 43 stores and ecommerce site.</li>
@@ -482,15 +486,15 @@
 											</ul>
 										</li>
 										<li>
-											<h4>Purchaser | 2001-2003</h4>
+											<h4>Purchaser | 2000-2001</h4>
 											<span><a href="https://www.thebodyshop.com/en-gb/" target="blank">Body Shop International, Brighton, England</a></span>
 										</li>
 										<li>
-											<h4>Senior Analyst, Ecommerce Operations | 2000-2003</h4>
+											<h4>Senior Analyst, Ecommerce Operations | 1998-2000</h4>
 											<span><a href="https://www.greenfingers.com/" target="blank">Greenfingers.com, London, England</a></span>
 										</li>
 										<li>
-											<h4>Graduate Trainee, Stock Control | 1998-2000</h4>
+											<h4>Graduate Trainee, Stock Control | 1997-1998</h4>
 											<span><a href="https://en.wikipedia.org/wiki/GUS_(retailer)" target="blank">Great Universal Stores, Manchester, England</a></span>
 										</li>
 									</ul>							
@@ -1014,7 +1018,7 @@
 							<div class="lx-social-media">
 								<ul>
 									<li><a href="https://www.youtube.com/channel/UCtd2ZpbECVuiks1dyKz2IQg" target="_blank"><i class="fa fa-youtube"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/james-murphy-50804420/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/jamesdavidmurphy/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 									<li><a href="https://github.com/jamesdmurphy51" target="_blank"><i class="fa fa-github"></i></a></li>
 									
 								</ul>
