contact form pt 1

--- a/public/index-1.html
+++ b/public/index-1.html
@@ -949,7 +949,7 @@
 								<div class="lx-clear-fix"></div>
 								<form action="#" method="post" autocomplete="off">
 									<h4>LEAVE ME A MESSAGE</h4>
-									<p>You can ask me about anything here, just type your name and e-mail and I'll answer you as soon as possible.</p>
+									<p id="persMsg">You can ask me about anything here, just type your name and e-mail and I'll answer you as soon as possible.</p>
 									<div class="lx-contact-saved"></div>
 									<div class="lx-contact-field">
 										<input type="text" name="fullname" placeholder="Your fullname here ..." />
